2006-09-28  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* w3m-mail.el (w3m-mail-user-agent-compose-function-alist): Add
	wl-user-agent.
	(w3m-mail-compose-with-semi): New function.

	* w3m.el (w3m-mail-user-agents): Add wl-user-agent.

2006-09-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-coding-system-to-mime-charset): New function.

	* w3m-mail.el (w3m-mail-compose-with-mml): Bind gnus-newsgroup-name
	to nil while composing mail if gnus-user-agent is used instead of
	removing X-Draft-From header.
	(w3m-mail): Use w3m-coding-system-to-mime-charset.

2006-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el (w3m-mail-compose-with-mml): Remove X-Draft-From
	header; make charset argument a string.
	(w3m-mail): Make charset argument to be passed to composer a symbol.

2006-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-mail.el: New file.

	* w3m.el: Autoload w3m-mail.
	(w3m-mail-user-agents): New variable.
	(w3m-menubar): Add w3m-mail.

2006-09-26  Luca Capello  <luca@pca.it>

	* w3m-search.el (w3m-search-new-session): New command.
	(w3m-search-read-variables): Ditto.
	(w3m-search-do-search): Ditto.
	(w3m-search): Rewrite to use the new commands above; add myself to
	the authors list.

	* w3m.el (autoload): Add w3m-search-new-session.
	(w3m-menubar): Add w3m-search-new-session.
	(w3m-info-like-map): Add w3m-search-new-session at the place of
	the called-interactively w3m-search to be compliant with the other
	*-new-session key-bindings.
	(w3m-mode): Add description of w3m-search-new-session to
	docstring.

2006-09-25  Luca Capello  <luca@pca.it>

	* w3m-bookmark.el: Add myself to the authors list, forgotten when
	submitting the patch for w3m-bookmark-view-new-session.

	* w3m.el: Ditto.

2006-09-22  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m-e21.el (w3m-tab-make-keymap): Support mouse wheel on the
	tab.

	* w3m-e23.el (w3m-tab-make-keymap): Ditto.

2006-09-20  Katsumi Yamaoka  <yamaoka@jpl.org>
